simdX86/c2nimsrc/simdSse.h

import simdX86Types
export simdX86Types

@#

__m128i _mm_abs_epi16 (__m128i a);
__m128i _mm_abs_epi32 (__m128i a);
__m128i _mm_abs_epi8 (__m128i a);
__m64 _mm_abs_pi16 (__m64 a);
__m64 _mm_abs_pi32 (__m64 a);
__m64 _mm_abs_pi8 (__m64 a);
__m128i _mm_add_epi16 (__m128i a, __m128i b);
__m128i _mm_add_epi32 (__m128i a, __m128i b);
__m128i _mm_add_epi64 (__m128i a, __m128i b);
__m128i _mm_add_epi8 (__m128i a, __m128i b);
__m128d _mm_add_pd (__m128d a, __m128d b);
__m64 _mm_add_pi16 (__m64 a, __m64 b);
__m64 _mm_add_pi32 (__m64 a, __m64 b);
__m64 _mm_add_pi8 (__m64 a, __m64 b);
__m128 _mm_add_ps (__m128 a, __m128 b);
__m128d _mm_add_sd (__m128d a, __m128d b);
__m64 _mm_add_si64 (__m64 a, __m64 b);
__m128 _mm_add_ss (__m128 a, __m128 b);
__m128i _mm_adds_epi16 (__m128i a, __m128i b);
__m128i _mm_adds_epi8 (__m128i a, __m128i b);
__m128i _mm_adds_epu16 (__m128i a, __m128i b);
__m128i _mm_adds_epu8 (__m128i a, __m128i b);
__m64 _mm_adds_pi16 (__m64 a, __m64 b);
__m64 _mm_adds_pi8 (__m64 a, __m64 b);
__m64 _mm_adds_pu16 (__m64 a, __m64 b);
__m64 _mm_adds_pu8 (__m64 a, __m64 b);
__m128d _mm_addsub_pd (__m128d a, __m128d b);
__m128 _mm_addsub_ps (__m128 a, __m128 b);
__m128i _mm_alignr_epi8 (__m128i a, __m128i b, int count);
__m64 _mm_alignr_pi8 (__m64 a, __m64 b, int count);
__m128d _mm_and_pd (__m128d a, __m128d b);
__m128 _mm_and_ps (__m128 a, __m128 b);
__m128i _mm_and_si128 (__m128i a, __m128i b);
__m64 _mm_and_si64 (__m64 a, __m64 b);
__m128d _mm_andnot_pd (__m128d a, __m128d b);
__m128 _mm_andnot_ps (__m128 a, __m128 b);
__m128i _mm_andnot_si128 (__m128i a, __m128i b);
__m64 _mm_andnot_si64 (__m64 a, __m64 b);
__m128i _mm_avg_epu16 (__m128i a, __m128i b);
__m128i _mm_avg_epu8 (__m128i a, __m128i b);
__m64 _mm_avg_pu16 (__m64 a, __m64 b);
__m64 _mm_avg_pu8 (__m64 a, __m64 b);
__m128i _mm_blend_epi16 (__m128i a, __m128i b, const int imm8);
__m128d _mm_blend_pd (__m128d a, __m128d b, const int imm8);
__m128 _mm_blend_ps (__m128 a, __m128 b, const int imm8);
__m128i _mm_blendv_epi8 (__m128i a, __m128i b, __m128i mask);
__m128d _mm_blendv_pd (__m128d a, __m128d b, __m128d mask);
__m128 _mm_blendv_ps (__m128 a, __m128 b, __m128 mask);
__m128i _mm_bslli_si128 (__m128i a, int imm8);
__m128i _mm_bsrli_si128 (__m128i a, int imm8);
__m128 _mm_castpd_ps (__m128d a);
__m128i _mm_castpd_si128 (__m128d a);
__m128d _mm_castps_pd (__m128 a);
__m128i _mm_castps_si128 (__m128 a);
__m128d _mm_castsi128_pd (__m128i a);
__m128 _mm_castsi128_ps (__m128i a);
__m128d _mm_ceil_pd (__m128d a);
__m128 _mm_ceil_ps (__m128 a);
__m128d _mm_ceil_sd (__m128d a, __m128d b);
__m128 _mm_ceil_ss (__m128 a, __m128 b);
void _mm_clflush (void const* p);
__m128i _mm_cmpeq_epi16 (__m128i a, __m128i b);
__m128i _mm_cmpeq_epi32 (__m128i a, __m128i b);
__m128i _mm_cmpeq_epi64 (__m128i a, __m128i b);
__m128i _mm_cmpeq_epi8 (__m128i a, __m128i b);
__m128d _mm_cmpeq_pd (__m128d a, __m128d b);
__m64 _mm_cmpeq_pi16 (__m64 a, __m64 b);
__m64 _mm_cmpeq_pi32 (__m64 a, __m64 b);
__m64 _mm_cmpeq_pi8 (__m64 a, __m64 b);
__m128 _mm_cmpeq_ps (__m128 a, __m128 b);
__m128d _mm_cmpeq_sd (__m128d a, __m128d b);
__m128 _mm_cmpeq_ss (__m128 a, __m128 b);
int _mm_cmpestra (__m128i a, int la, __m128i b, int lb, const int imm8);
int _mm_cmpestrc (__m128i a, int la, __m128i b, int lb, const int imm8);
int _mm_cmpestri (__m128i a, int la, __m128i b, int lb, const int imm8);
__m128i _mm_cmpestrm (__m128i a, int la, __m128i b, int lb, const int imm8);
int _mm_cmpestro (__m128i a, int la, __m128i b, int lb, const int imm8);
int _mm_cmpestrs (__m128i a, int la, __m128i b, int lb, const int imm8);
int _mm_cmpestrz (__m128i a, int la, __m128i b, int lb, const int imm8);
__m128d _mm_cmpge_pd (__m128d a, __m128d b);
__m128 _mm_cmpge_ps (__m128 a, __m128 b);
__m128d _mm_cmpge_sd (__m128d a, __m128d b);
__m128 _mm_cmpge_ss (__m128 a, __m128 b);
__m128i _mm_cmpgt_epi16 (__m128i a, __m128i b);
__m128i _mm_cmpgt_epi32 (__m128i a, __m128i b);
__m128i _mm_cmpgt_epi64 (__m128i a, __m128i b);
__m128i _mm_cmpgt_epi8 (__m128i a, __m128i b);
__m128d _mm_cmpgt_pd (__m128d a, __m128d b);
__m64 _mm_cmpgt_pi16 (__m64 a, __m64 b);
__m64 _mm_cmpgt_pi32 (__m64 a, __m64 b);
__m64 _mm_cmpgt_pi8 (__m64 a, __m64 b);
__m128 _mm_cmpgt_ps (__m128 a, __m128 b);
__m128d _mm_cmpgt_sd (__m128d a, __m128d b);
__m128 _mm_cmpgt_ss (__m128 a, __m128 b);
int _mm_cmpistra (__m128i a, __m128i b, const int imm8);
int _mm_cmpistrc (__m128i a, __m128i b, const int imm8);
int _mm_cmpistri (__m128i a, __m128i b, const int imm8);
__m128i _mm_cmpistrm (__m128i a, __m128i b, const int imm8);
int _mm_cmpistro (__m128i a, __m128i b, const int imm8);
int _mm_cmpistrs (__m128i a, __m128i b, const int imm8);
int _mm_cmpistrz (__m128i a, __m128i b, const int imm8);
__m128d _mm_cmple_pd (__m128d a, __m128d b);
__m128 _mm_cmple_ps (__m128 a, __m128 b);
__m128d _mm_cmple_sd (__m128d a, __m128d b);
__m128 _mm_cmple_ss (__m128 a, __m128 b);
__m128i _mm_cmplt_epi16 (__m128i a, __m128i b);
__m128i _mm_cmplt_epi32 (__m128i a, __m128i b);
__m128i _mm_cmplt_epi8 (__m128i a, __m128i b);
__m128d _mm_cmplt_pd (__m128d a, __m128d b);
__m128 _mm_cmplt_ps (__m128 a, __m128 b);
__m128d _mm_cmplt_sd (__m128d a, __m128d b);
__m128 _mm_cmplt_ss (__m128 a, __m128 b);
__m128d _mm_cmpneq_pd (__m128d a, __m128d b);
__m128 _mm_cmpneq_ps (__m128 a, __m128 b);
__m128d _mm_cmpneq_sd (__m128d a, __m128d b);