simdX86/simdSseGeneric.nim


proc abs_epi16*(a: m128i): m128i {.importc: "_mm_abs_epi16", header: "immintrin.h".}
proc abs_epi32*(a: m128i): m128i {.importc: "_mm_abs_epi32", header: "immintrin.h".}
proc abs_epi8*(a: m128i): m128i {.importc: "_mm_abs_epi8", header: "immintrin.h".}
proc abs_pi16*(a: m64): m64 {.importc: "_mm_abs_pi16", header: "immintrin.h".}
proc abs_pi32*(a: m64): m64 {.importc: "_mm_abs_pi32", header: "immintrin.h".}
proc abs_pi8*(a: m64): m64 {.importc: "_mm_abs_pi8", header: "immintrin.h".}
proc add_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_add_epi16",
                                       header: "immintrin.h".}
proc add_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_add_epi32",
                                       header: "immintrin.h".}
proc add_epi64*(a: m128i; b: m128i): m128i {.importc: "_mm_add_epi64",
                                       header: "immintrin.h".}
proc add_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_add_epi8",
                                      header: "immintrin.h".}
proc add*(a: m128d; b: m128d): m128d {.importc: "_mm_add_pd", header: "immintrin.h".}
proc add_pi16*(a: m64; b: m64): m64 {.importc: "_mm_add_pi16", header: "immintrin.h".}
proc add_pi32*(a: m64; b: m64): m64 {.importc: "_mm_add_pi32", header: "immintrin.h".}
proc add_pi8*(a: m64; b: m64): m64 {.importc: "_mm_add_pi8", header: "immintrin.h".}
proc add*(a: m128; b: m128): m128 {.importc: "_mm_add_ps", header: "immintrin.h".}
proc add_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_add_sd", header: "immintrin.h".}
proc add_si64*(a: m64; b: m64): m64 {.importc: "_mm_add_si64", header: "immintrin.h".}
proc add_ss*(a: m128; b: m128): m128 {.importc: "_mm_add_ss", header: "immintrin.h".}
proc adds_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_adds_epi16",
                                        header: "immintrin.h".}
proc adds_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_adds_epi8",
                                       header: "immintrin.h".}
proc adds_epu16*(a: m128i; b: m128i): m128i {.importc: "_mm_adds_epu16",
                                        header: "immintrin.h".}
proc adds_epu8*(a: m128i; b: m128i): m128i {.importc: "_mm_adds_epu8",
                                       header: "immintrin.h".}
proc adds_pi16*(a: m64; b: m64): m64 {.importc: "_mm_adds_pi16", header: "immintrin.h".}
proc adds_pi8*(a: m64; b: m64): m64 {.importc: "_mm_adds_pi8", header: "immintrin.h".}
proc adds_pu16*(a: m64; b: m64): m64 {.importc: "_mm_adds_pu16", header: "immintrin.h".}
proc adds_pu8*(a: m64; b: m64): m64 {.importc: "_mm_adds_pu8", header: "immintrin.h".}
proc addsub*(a: m128d; b: m128d): m128d {.importc: "_mm_addsub_pd",
                                    header: "immintrin.h".}
proc addsub*(a: m128; b: m128): m128 {.importc: "_mm_addsub_ps", header: "immintrin.h".}
proc alignr_epi8*(a: m128i; b: m128i; count: cint): m128i {.importc: "_mm_alignr_epi8",
    header: "immintrin.h".}
proc alignr_pi8*(a: m64; b: m64; count: cint): m64 {.importc: "_mm_alignr_pi8",
    header: "immintrin.h".}
proc `and`*(a: m128d; b: m128d): m128d {.importc: "_mm_and_pd", header: "immintrin.h".}
proc `and`*(a: m128; b: m128): m128 {.importc: "_mm_and_ps", header: "immintrin.h".}
proc and_si128*(a: m128i; b: m128i): m128i {.importc: "_mm_and_si128",
                                       header: "immintrin.h".}
proc and_si64*(a: m64; b: m64): m64 {.importc: "_mm_and_si64", header: "immintrin.h".}
proc andnot*(a: m128d; b: m128d): m128d {.importc: "_mm_andnot_pd",
                                    header: "immintrin.h".}
proc andnot*(a: m128; b: m128): m128 {.importc: "_mm_andnot_ps", header: "immintrin.h".}
proc andnot_si128*(a: m128i; b: m128i): m128i {.importc: "_mm_andnot_si128",
    header: "immintrin.h".}
proc andnot_si64*(a: m64; b: m64): m64 {.importc: "_mm_andnot_si64",
                                   header: "immintrin.h".}
proc avg_epu16*(a: m128i; b: m128i): m128i {.importc: "_mm_avg_epu16",
                                       header: "immintrin.h".}
proc avg_epu8*(a: m128i; b: m128i): m128i {.importc: "_mm_avg_epu8",
                                      header: "immintrin.h".}
proc avg_pu16*(a: m64; b: m64): m64 {.importc: "_mm_avg_pu16", header: "immintrin.h".}
proc avg_pu8*(a: m64; b: m64): m64 {.importc: "_mm_avg_pu8", header: "immintrin.h".}
proc blend_epi16*(a: m128i; b: m128i; imm8: cint): m128i {.importc: "_mm_blend_epi16",
    header: "immintrin.h".}
proc blend*(a: m128d; b: m128d; imm8: cint): m128d {.importc: "_mm_blend_pd",
    header: "immintrin.h".}
proc blend*(a: m128; b: m128; imm8: cint): m128 {.importc: "_mm_blend_ps",
    header: "immintrin.h".}
proc blendv_epi8*(a: m128i; b: m128i; mask: m128i): m128i {.importc: "_mm_blendv_epi8",
    header: "immintrin.h".}
proc blendv*(a: m128d; b: m128d; mask: m128d): m128d {.importc: "_mm_blendv_pd",
    header: "immintrin.h".}
proc blendv*(a: m128; b: m128; mask: m128): m128 {.importc: "_mm_blendv_ps",
    header: "immintrin.h".}
proc bslli_si128*(a: m128i; imm8: cint): m128i {.importc: "_mm_bslli_si128",
    header: "immintrin.h".}
proc bsrli_si128*(a: m128i; imm8: cint): m128i {.importc: "_mm_bsrli_si128",
    header: "immintrin.h".}
proc castps*(a: m128d): m128 {.importc: "_mm_castpd_ps", header: "immintrin.h".}
proc castsi128*(a: m128d): m128i {.importc: "_mm_castpd_si128", header: "immintrin.h".}
proc castpd*(a: m128): m128d {.importc: "_mm_castps_pd", header: "immintrin.h".}
proc castsi128*(a: m128): m128i {.importc: "_mm_castps_si128", header: "immintrin.h".}
proc castpd*(a: m128i): m128d {.importc: "_mm_castsi128_pd", header: "immintrin.h".}
proc castps*(a: m128i): m128 {.importc: "_mm_castsi128_ps", header: "immintrin.h".}
proc ceil*(a: m128d): m128d {.importc: "_mm_ceil_pd", header: "immintrin.h".}
proc ceil*(a: m128): m128 {.importc: "_mm_ceil_ps", header: "immintrin.h".}
proc ceil_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_ceil_sd", header: "immintrin.h".}
proc ceil_ss*(a: m128; b: m128): m128 {.importc: "_mm_ceil_ss", header: "immintrin.h".}
proc clflush*(p: pointer) {.importc: "_mm_clflush", header: "immintrin.h".}
proc cmpeq_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_cmpeq_epi16",
    header: "immintrin.h".}
proc cmpeq_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_cmpeq_epi32",
    header: "immintrin.h".}
proc cmpeq_epi64*(a: m128i; b: m128i): m128i {.importc: "_mm_cmpeq_epi64",
    header: "immintrin.h".}
proc cmpeq_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_cmpeq_epi8",
                                        header: "immintrin.h".}
proc cmpeq*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpeq_pd", header: "immintrin.h".}
proc cmpeq_pi16*(a: m64; b: m64): m64 {.importc: "_mm_cmpeq_pi16", header: "immintrin.h".}
proc cmpeq_pi32*(a: m64; b: m64): m64 {.importc: "_mm_cmpeq_pi32", header: "immintrin.h".}
proc cmpeq_pi8*(a: m64; b: m64): m64 {.importc: "_mm_cmpeq_pi8", header: "immintrin.h".}
proc cmpeq*(a: m128; b: m128): m128 {.importc: "_mm_cmpeq_ps", header: "immintrin.h".}
proc cmpeq_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpeq_sd",
                                      header: "immintrin.h".}
proc cmpeq_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpeq_ss", header: "immintrin.h".}
proc cmpestra*(a: m128i; la: cint; b: m128i; lb: cint; imm8: cint): cint {.
    importc: "_mm_cmpestra", header: "immintrin.h".}
proc cmpestrc*(a: m128i; la: cint; b: m128i; lb: cint; imm8: cint): cint {.
    importc: "_mm_cmpestrc", header: "immintrin.h".}
proc cmpestri*(a: m128i; la: cint; b: m128i; lb: cint; imm8: cint): cint {.
    importc: "_mm_cmpestri", header: "immintrin.h".}
proc cmpestrm*(a: m128i; la: cint; b: m128i; lb: cint; imm8: cint): m128i {.
    importc: "_mm_cmpestrm", header: "immintrin.h".}
proc cmpestro*(a: m128i; la: cint; b: m128i; lb: cint; imm8: cint): cint {.
    importc: "_mm_cmpestro", header: "immintrin.h".}
proc cmpestrs*(a: m128i; la: cint; b: m128i; lb: cint; imm8: cint): cint {.
    importc: "_mm_cmpestrs", header: "immintrin.h".}
proc cmpestrz*(a: m128i; la: cint; b: m128i; lb: cint; imm8: cint): cint {.
    importc: "_mm_cmpestrz", header: "immintrin.h".}
proc cmpge*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpge_pd", header: "immintrin.h".}
proc cmpge*(a: m128; b: m128): m128 {.importc: "_mm_cmpge_ps", header: "immintrin.h".}
proc cmpge_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpge_sd",
                                      header: "immintrin.h".}
proc cmpge_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpge_ss", header: "immintrin.h".}
proc cmpgt_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_cmpgt_epi16",
    header: "immintrin.h".}
proc cmpgt_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_cmpgt_epi32",
    header: "immintrin.h".}
proc cmpgt_epi64*(a: m128i; b: m128i): m128i {.importc: "_mm_cmpgt_epi64",
    header: "immintrin.h".}
proc cmpgt_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_cmpgt_epi8",
                                        header: "immintrin.h".}
proc cmpgt*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpgt_pd", header: "immintrin.h".}
proc cmpgt_pi16*(a: m64; b: m64): m64 {.importc: "_mm_cmpgt_pi16", header: "immintrin.h".}
proc cmpgt_pi32*(a: m64; b: m64): m64 {.importc: "_mm_cmpgt_pi32", header: "immintrin.h".}
proc cmpgt_pi8*(a: m64; b: m64): m64 {.importc: "_mm_cmpgt_pi8", header: "immintrin.h".}
proc cmpgt*(a: m128; b: m128): m128 {.importc: "_mm_cmpgt_ps", header: "immintrin.h".}
proc cmpgt_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpgt_sd",
                                      header: "immintrin.h".}
proc cmpgt_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpgt_ss", header: "immintrin.h".}
proc cmpistra*(a: m128i; b: m128i; imm8: cint): cint {.importc: "_mm_cmpistra",
    header: "immintrin.h".}
proc cmpistrc*(a: m128i; b: m128i; imm8: cint): cint {.importc: "_mm_cmpistrc",
    header: "immintrin.h".}
proc cmpistri*(a: m128i; b: m128i; imm8: cint): cint {.importc: "_mm_cmpistri",
    header: "immintrin.h".}
proc cmpistrm*(a: m128i; b: m128i; imm8: cint): m128i {.importc: "_mm_cmpistrm",
    header: "immintrin.h".}
proc cmpistro*(a: m128i; b: m128i; imm8: cint): cint {.importc: "_mm_cmpistro",
    header: "immintrin.h".}
proc cmpistrs*(a: m128i; b: m128i; imm8: cint): cint {.importc: "_mm_cmpistrs",
    header: "immintrin.h".}
proc cmpistrz*(a: m128i; b: m128i; imm8: cint): cint {.importc: "_mm_cmpistrz",
    header: "immintrin.h".}
proc cmple*(a: m128d; b: m128d): m128d {.importc: "_mm_cmple_pd", header: "immintrin.h".}
proc cmple*(a: m128; b: m128): m128 {.importc: "_mm_cmple_ps", header: "immintrin.h".}
proc cmple_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmple_sd",
                                      header: "immintrin.h".}
proc cmple_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmple_ss", header: "immintrin.h".}
proc cmplt_epi16*(a: m128i; b: m128i): m128i {.importc: "_mm_cmplt_epi16",
    header: "immintrin.h".}
proc cmplt_epi32*(a: m128i; b: m128i): m128i {.importc: "_mm_cmplt_epi32",
    header: "immintrin.h".}
proc cmplt_epi8*(a: m128i; b: m128i): m128i {.importc: "_mm_cmplt_epi8",
                                        header: "immintrin.h".}
proc cmplt*(a: m128d; b: m128d): m128d {.importc: "_mm_cmplt_pd", header: "immintrin.h".}
proc cmplt*(a: m128; b: m128): m128 {.importc: "_mm_cmplt_ps", header: "immintrin.h".}
proc cmplt_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmplt_sd",
                                      header: "immintrin.h".}
proc cmplt_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmplt_ss", header: "immintrin.h".}
proc cmpneq*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpneq_pd",
                                    header: "immintrin.h".}
proc cmpneq*(a: m128; b: m128): m128 {.importc: "_mm_cmpneq_ps", header: "immintrin.h".}
proc cmpneq_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpneq_sd",
                                       header: "immintrin.h".}
